--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -146,7 +146,13 @@
     "emptyContainerContent": "வழங்குபவர்கள் இல்லை. ",
     "containerHeading": "வழங்குபவர்களின் பட்டியல்",
     "containerSubHeading": "உங்கள் நம்பகமான வழங்குநரைத் தேடி, அடுத்த கட்டத்தில் நற்சான்றிதழ் வகையைத் தேர்ந்தெடுக்கவும்.",
-    "errorContent": "இந்த சேவை தற்போது கிடைக்கவில்லை. "
+    "errorContent": "இந்த சேவை தற்போது கிடைக்கவில்லை. ",
+    "searchIssuer": {
+      "helpText": {
+        "info": "எழுத்துகள், எண்கள், ஹைபன்கள் (-), அடிக்கோடிட்டுகள் (_) அல்லது அடைப்புக்குறிகள் ( ) ஆகியவற்றைப் பயன்படுத்தி வழங்குபவரின் பெயரால் தேடவும்.",
+        "error": "சரியான வழங்குநரின் பெயரை உள்ளிடவும். எழுத்துக்கள், எண்கள், இடைவெளிகள், ஹைபன்கள் (-), அடிக்கோடுகள் (_) மற்றும் அடைப்புக்குறிகள் ( ) மட்டுமே அனுமதிக்கப்படும். சிறப்பு எழுத்துக்கள் அனுமதிக்கப்படவில்லை."
+      }
+    }
   },
   "CredentialsPage": {
     "searchText": "தேடல் நற்சான்றிதழ் வகை",
