--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -146,7 +146,13 @@
     "emptyContainerContent": "कोई जारीकर्ता नहीं मिला. ",
     "containerHeading": "जारीकर्ताओं की सूची",
     "containerSubHeading": "अपने विश्वसनीय जारीकर्ता को खोजें और अगले चरण में एक क्रेडेंशियल प्रकार चुनें।",
-    "errorContent": "यह सेवा फ़िलहाल अनुपलब्ध है. "
+    "errorContent": "यह सेवा फ़िलहाल अनुपलब्ध है. ",
+    "searchIssuer": {
+      "helpText": {
+        "info": "केवल अक्षरों, संख्याओं, हाइफ़न (-), अंडरस्कोर (_) या कोष्ठक ( ) का उपयोग करके जारीकर्ता के नाम से खोजें।",
+        "error": "कृपया एक वैध जारीकर्ता नाम दर्ज करें. केवल अक्षर, संख्या, रिक्त स्थान, हाइफ़न (-), अंडरस्कोर (_), और कोष्ठक ( ) की अनुमति है। विशेष वर्णों की अनुमति नहीं है."
+      }
+    }
   },
   "CredentialsPage": {
     "searchText": "क्रेडेंशियल प्रकार खोजें",
