--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -146,7 +146,13 @@
     "emptyContainerContent": "ಯಾವುದೇ ವಿತರಕರು ಕಂಡುಬಂದಿಲ್ಲ. ",
     "containerHeading": "ವಿತರಕರ ಪಟ್ಟಿ",
     "containerSubHeading": "ನಿಮ್ಮ ವಿಶ್ವಾಸಾರ್ಹ ವಿತರಕರನ್ನು ಹುಡುಕಿ ಮತ್ತು ಮುಂದಿನ ಹಂತದಲ್ಲಿ ರುಜುವಾತು ಪ್ರಕಾರವನ್ನು ಆಯ್ಕೆಮಾಡಿ.",
-    "errorContent": "ಸೇವೆಯು ಪ್ರಸ್ತುತ ಲಭ್ಯವಿಲ್ಲ. "
+    "errorContent": "ಸೇವೆಯು ಪ್ರಸ್ತುತ ಲಭ್ಯವಿಲ್ಲ. ",
+    "searchIssuer": {
+      "helpText": {
+        "info": "ಅಕ್ಷರಗಳು, ಸಂಖ್ಯೆಗಳು, ಹೈಫನ್‌ಗಳು (-), ಅಂಡರ್‌ಸ್ಕೋರ್‌ಗಳು (_) ಅಥವಾ ಬ್ರಾಕೆಟ್‌ಗಳನ್ನು ( ) ಮಾತ್ರ ಬಳಸಿಕೊಂಡು ವಿತರಕರ ಹೆಸರಿನ ಮೂಲಕ ಹುಡುಕಿ.",
+        "error": "ದಯವಿಟ್ಟು ಮಾನ್ಯ ವಿತರಕರ ಹೆಸರನ್ನು ನಮೂದಿಸಿ. ಅಕ್ಷರಗಳು, ಸಂಖ್ಯೆಗಳು, ಸ್ಪೇಸ್‌ಗಳು, ಹೈಫನ್‌ಗಳು (-), ಅಂಡರ್‌ಸ್ಕೋರ್‌ಗಳು (_), ಮತ್ತು ಬ್ರಾಕೆಟ್‌ಗಳನ್ನು ( ) ಮಾತ್ರ ಅನುಮತಿಸಲಾಗಿದೆ. ವಿಶೇಷ ಅಕ್ಷರಗಳನ್ನು ಅನುಮತಿಸಲಾಗುವುದಿಲ್ಲ."
+      }
+    }
   },
   "CredentialsPage": {
     "searchText": "ರುಜುವಾತು ಪ್ರಕಾರವನ್ನು ಹುಡುಕಿ",
