--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -24,21 +24,21 @@
     },
     "FeatureItem1": {
       "heading": "Accédez à vos identifiants, où que vous soyez",
-      "item1": "Identifiants simplifiés",
+      "item1": "Informations d'identification simplifiées",
       "description1": "Gardez tous vos documents essentiels",
-      "item2": "Plus de paperasse. Tout en un seul endroit",
+      "item2": "Plus de paperasse, tout au même endroit",
       "description2": "Téléchargez, stockez et récupérez facilement vos documents. Gagnant, gagnant, gagnant."
     },
     "FeatureItem2": {
       "heading": "Vos documents téléchargés en une seconde",
       "item1": "Téléchargez en toute confiance",
       "description1": "Enregistrez instantanément vos documents importants",
-      "item2": "Sûr et sécurisé",
+      "item2": "Sain et sauf",
       "description2": "Téléchargez des pièces d'identité, des licences et plus encore, en un seul endroit sécurisé."
     },
     "FeatureItem3": {
       "heading": "Partage facile",
-      "item1": "Partagez avec un code QR",
+      "item1": "Partager avec un code QR",
       "description1": "Partagez facilement vos pièces d'identité et certificats en déplacement. Présentez simplement le code QR de votre document, à scanner et partager.",
       "item2": "Lire, définir, partager",
       "description2": "Code QR vérifié en temps réel."
@@ -47,7 +47,7 @@
       "heading": "Sécurisé et privé",
       "item1": "Vos identifiants, protégés",
       "description1": "Vos données restent privées, grâce au mécanisme de sécurité intégré.",
-      "item2": "Restez tranquille",
+      "item2": "Soyez tranquille",
       "description2": "Gardez vos identifiants en sécurité, pour que vous puissiez vous concentrer sur l'essentiel."
     },
     "FeatureItem5": {
@@ -60,15 +60,15 @@
     "QuickTip": {
       "heading": "Conseils rapides pour télécharger instantanément vos identifiants",
       "toastText": "à venir",
-      "buttontext": "Cliquez ici"
+      "buttontext": "APPRENDRE ENCORE PLUS"
     },
     "Login": {
       "loginTitle": "Se connecter",
       "loginDescription": "Connectez-vous avec votre compte ou continuez en tant qu'invité pour accéder à vos identifiants.",
       "loginNote": "Certaines fonctionnalités peuvent être limitées en mode invité.",
-      "loggingIn": "Connexion en cours",
-      "loginGoogle": "Continuer avec Google",
-      "loginGuest": "Continuer en tant qu'invité"
+      "loggingIn": "CONNEXION",
+      "loginGoogle": "CONTINUER AVEC GOOGLE",
+      "loginGuest": "CONTINUER EN TANT QU'INVITÉ"
     },
     "LoginFailedModal": {
       "failureMessage": "Échec de la connexion",
@@ -83,8 +83,8 @@
     }
   },
   "PasscodePage": {
-    "submit": "Soumettre",
-    "submitting": "Soumission en cours",
+    "submit": "SOUMETTRE",
+    "submitting": "SOUMISSION",
     "setPasscode": "Définissez votre code d'accès pour commencer",
     "setPasscodeDescription": "Veuillez mémoriser ou stocker en toute sécurité votre code d'accès. Vous en aurez besoin à chaque accès au portefeuille.",
     "enterPasscode": "Entrez votre code d'accès pour continuer",
@@ -420,11 +420,11 @@
   "StoredCards": {
     "title": "Cartes Stockées",
     "header": {
-      "addCards": "Ajouter des Cartes"
+      "addCards": "AJOUTER DES CARTES"
     },
     "emptyScreen": {
       "title": "Aucune Carte Stockée !",
-      "actionText": "Vous n'avez encore téléchargé aucune carte. Appuyez sur \"Ajouter des cartes\" pour commencer."
+      "actionText": "Vous n'avez encore téléchargé aucune carte. Appuyez sur \"AJOUTER DES CARTES\" pour commencer."
     },
     "search": {
       "placeholder": "Recherchez vos cartes par nom",
