--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -24,51 +24,51 @@
     },
     "FeatureItem1": {
       "heading": "உங்கள் சான்றுகளை எங்கு வேண்டுமானாலும் அணுகவும்",
-      "item1": "சான்றுகள் எளிமைப்படுத்தப்பட்டன",
+      "item1": "சான்றுகள் எளிமைப்படுத்தப்பட்டுள்ளன",
       "description1": "உங்கள் அனைத்து முக்கிய ஆவணங்களையும் வைத்திருங்கள்",
-      "item2": "இனி ஆவண வேலை இல்லை. எல்லாம் ஒரே இடத்தில்",
+      "item2": "இனி காகித வேலைகள் இல்லை, அனைத்தும் ஒரே இடத்தில்",
       "description2": "உங்கள் ஆவணங்களை எளிதாக பதிவிறக்கம் செய்யவும், சேமிக்கவும் மற்றும் மீட்டெடுக்கவும். வெற்றி, வெற்றி, வெற்றி."
     },
     "FeatureItem2": {
       "heading": "உங்கள் ஆவணங்கள் ஒரு விநாடியில் பதிவிறக்கப்பட்டன",
       "item1": "நம்பிக்கையுடன் பதிவிறக்கவும்",
       "description1": "உங்கள் முக்கிய ஆவணங்களை உடனடியாக சேமிக்கவும்",
-      "item2": "பாதுகாப்பான மற்றும் பாதுகாப்பான",
+      "item2": "பாதுகாப்பான மற்றும் ஒலி",
       "description2": "ஒரே பாதுகாப்பான இடத்தில் ஐடிக்கள், உரிமங்கள் மற்றும் பலவற்றை பதிவிறக்கவும்."
     },
     "FeatureItem3": {
       "heading": "எளிதான பகிர்வு",
-      "item1": "QR குறியீட்டுடன் பகிரவும்",
+      "item1": "QR குறியீட்டைப் பயன்படுத்திப் பகிரவும்",
       "description1": "உங்கள் ஐடிக்கள் மற்றும் சான்றுகளை எளிதாக பகிரவும். உங்கள் ஆவணத்தின் QR குறியீட்டை ஸ்கேன் செய்து பகிர்வதற்காக வழங்கவும்.",
       "item2": "படிக்கவும், அமைக்கவும், பகிரவும்",
       "description2": "QR குறியீடு நேரடியாக சரிபார்க்கப்பட்டது."
     },
     "FeatureItem4": {
       "heading": "பாதுகாப்பான மற்றும் தனிப்பட்டது",
-      "item1": "உங்கள் சான்றுகள், பாதுகாக்கப்பட்டவை",
+      "item1": "உங்கள் நற்சான்றிதழ்கள் பாதுகாக்கப்பட்டுள்ளன",
       "description1": "உங்கள் தரவுகள் தனிப்பட்டதாகவே இருக்கும், உட்புற பாதுகாப்பு முறைமையின் மூலம்.",
-      "item2": "அமைதியாக இருங்கள்",
+      "item2": "நிம்மதியாக ஓய்வெடுங்கள்",
       "description2": "உங்கள் சான்றுகளைப் பாதுகாப்பாக வைத்திருங்கள், அதனால் நீங்கள் முக்கியமான விஷயங்களில் கவனம் செலுத்தலாம்."
     },
     "FeatureItem5": {
       "heading": "விரிவான அணுகல் மற்றும் இணக்கமானது",
-      "item1": "உங்கள் விருப்பமான உலாவியில் கிடைக்கிறது",
+      "item1": "உங்களுக்குப் பிடித்த உலாவியில் கிடைக்கிறது",
       "description1": "Inji Wallet Chrome, Safari, Firefox மற்றும் Edge உடன் வேலை செய்கிறது.",
-      "item2": "எப்போதும் அணுகக்கூடிய இடத்தில்",
+      "item2": "எப்போதும் கைக்கு எட்டக்கூடியது",
       "description2": "நீங்கள் எங்கு இருந்தாலும் வசதி மற்றும் அணுகலை உறுதிசெய்கிறது, உங்கள் ஆவணங்கள் எப்போதும் அணுகக்கூடிய இடத்தில் இருக்கும்."
     },
     "QuickTip": {
       "heading": "உங்கள் சான்றுகளை உடனடியாக பதிவிறக்குவதற்கான விரைவான குறிப்புகள்",
       "toastText": "விரைவில்",
-      "buttontext": "இங்கே கிளிக் செய்யவும்"
+      "buttontext": "மேலும் அறிக"
     },
     "Login": {
       "loginTitle": "உள்நுழையவும்",
       "loginDescription": "உங்கள் கணக்கில் உள்நுழையவோ அல்லது உங்கள் சான்றுகளுக்கு அணுக விருந்தினராக தொடரவோ செய்யுங்கள்.",
       "loginNote": "விருந்தினர் பயன்முறையில் சில அம்சங்கள் கட்டுப்படுத்தப்பட்டிருக்கலாம்.",
       "loggingIn": "உள்நுழைகிறது",
-      "loginGoogle": "Google மூலம் தொடரவும்",
-      "loginGuest": "விருந்தினராக தொடரவும்"
+      "loginGoogle": "GOOGLE உடன் தொடரவும்",
+      "loginGuest": "விருந்தினராகத் தொடரவும்"
     },
     "LoginFailedModal": {
       "failureMessage": "உள்நுழைவு தோல்வி",
@@ -84,7 +84,7 @@
   },
   "PasscodePage": {
     "submit": "சமர்ப்பிக்கவும்",
-    "submitting": "சமர்ப்பிக்கப்படுகின்றது",
+    "submitting": "சமர்ப்பிக்கிறது",
     "setPasscode": "தொடங்க உங்கள் பாஸ்கோடு அமைக்கவும்",
     "setPasscodeDescription": "தயவுசெய்து உங்கள் பாஸ்கோட்டை நினைவில் வையுங்கள் அல்லது பாதுகாப்பாக சேமிக்கவும். ஒவ்வொரு முறையும் வாலட்டை அணுகும்போது இது தேவைப்படும்.",
     "enterPasscode": "தொடர உங்கள் பாஸ்கோட்டை உள்ளிடவும்",
@@ -141,7 +141,7 @@
       "title": "உங்கள் சரிபார்க்கக்கூடிய சான்றுகளை அணுகவும்",
       "title2": "எளிதாக!",
       "subTitle": "உங்கள் நற்சான்றிதழ்களை உடனடியாகப் பாதுகாப்பாக பதிவிறக்கம் செய்து பகிரவும்.",
-      "searchText": "வழங்குபவர்களின் பெயரைப் பயன்படுத்தி தேடவும்"
+      "searchText": "பெயர் வாரியாக வழங்குநர்களைத் தேடுங்கள்"
     },
     "emptyContainerContent": "வழங்குபவர்கள் இல்லை. ",
     "containerHeading": "வழங்குபவர்களின் பட்டியல்",
@@ -420,11 +420,11 @@
   "StoredCards": {
     "title": "சேமிக்கப்பட்ட அட்டைகள்",
     "header": {
-      "addCards": "அட்டைகள் சேர்க்க"
+      "addCards": "கார்டுகளைச் சேர்க்கவும்"
     },
     "emptyScreen": {
       "title": "எந்த அட்டைகளும் சேமிக்கப்படவில்லை!",
-      "actionText": "நீங்கள் இன்னும் எந்த அட்டைகளையும் பதிவிறக்கவில்லை. தொடங்குவதற்கு \"அட்டைகள் சேர்க்க\" என்பதைத் தட்டவும்."
+      "actionText": "நீங்கள் இன்னும் எந்த அட்டைகளையும் பதிவிறக்கவில்லை. தொடங்குவதற்கு \"கார்டுகளைச் சேர்\" என்பதைத் தட்டவும்."
     },
     "search": {
       "placeholder": "உங்கள் அட்டைகளை பெயர் மூலம் தேடுங்கள்",
